corrected some code smells